Fix alternate day text color to increase contrast ratio #538

--- a/src/components/ids-month-view/ids-month-view.scss
+++ b/src/components/ids-month-view/ids-month-view.scss
@@ -303,7 +303,7 @@
     }
 
     &.alternate .day-text {
-      @include text-slate-40();
+      @include text-slate-60();
     }
 
     .day-text {
